--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     <body>
         <!--========== HEADER ==========-->
         <header class="l-header" id="header">
-            
+            <nav class="nav bd-contaneirer">
+                <a href="#" class="nav__logo">Maik</a>
+                <div class="nav__menu"></div>
+
+            </nav>            
         </header>
 
         <main class="l-main bd-container">
