--- a/index.html
+++ b/index.html
@@ -106,17 +106,73 @@
 
                 <!--========== SOCIAL ==========-->
                 <section class="social section">
+                    <h2 class="section-title">Social</h2>
 
+                    <div class="social__container bd-grid">
+                        <a href="https://www.linkedin.com/" target="_blank" targetclass="social__link">
+                            <i class="bx bxl-linkedin-square social__icon"></i>@maikcosta
+                        </a>
+                        <a href="https://www.facebook.com/" target="_blank" targetclass="social__link">
+                            <i class="bx bxl-facebook social__icon"></i>@maikcosta
+                        </a>
+                        <a href="https://www.instagram.com/" target="_blank" targetclass="social__link">
+                            <i class="bx bxl-instagram social__icon"></i>@maikcosta
+                        </a>
+                    </div>
                 </section>
 
                 <!--========== PROFILE ==========-->
                 <section class="profile section" id="profile">
-
+                    <h2 class="section-title">Profile</h2>
+                    <p class="profile_description">
+                        MBA Projetos de Sistema de Informação e graduações em duas áreas tecnológicas sendo Desenvolvimento de Sistemas Web e Redes de Computadores, atualmente tem como função principal ser gestor de TI aplicando boas práticas adquiridas através de certificações (DevOps, Agile Scrum e Lean It) aplicando frameworks de engenharia de software com o uso de padrões orientados a objetos, com prioridade na melhoria do processo e eficiência na construção de soluções, manutenção de softwares e execução de processos operacionais.
+                        Experiência em levantamento de requisitos, implantação, sustentação de sistemas, integridade da informação e CI / CD.
+                        Negociação com parceiros de tecnologia.
+                    </p>
                 </section>
 
                 <!--========== EDUCATION ==========-->
                 <section class="education section" id="education">
+                    <h2 class="setion-title">Education</h2>
+        
+                    <div class="education__container bd-grid">
+                        <div class="education_content">
+                            <div class="education__time">
+                                <span class="education__rounder"></span>
+                                <span class="education__line"></span>
+                            </div>
 
+                            <div class="education__data bd-grid">
+                                <h3 class="education__title">MBA Information Systems Projects</h3>
+                                <span class="education__studies">University Descomplica</span>
+                                <span class="education__year">2020 - 2021</span>
+                            </div>
+                        </div>
+                        <div class="education_content">
+                            <div class="education__time">
+                                <span class="education__rounder"></span>
+                                <span class="education__line"></span>
+                            </div>
+
+                            <div class="education__data bd-grid">
+                                <h3 class="education__title">Systems and Telecommunications Networks Technology </h3>
+                                <span class="education__studies">University Eniac</span>
+                                <span class="education__year">2006 - 2008</span>
+                            </div>
+                        </div>
+                        <div class="education_content">
+                            <div class="education__time">
+                                <span class="education__rounder"></span>
+                                <span class="education__line"></span>
+                            </div>
+
+                            <div class="education__data bd-grid">
+                                <h3 class="education__title">Web Development Technology </h3>
+                                <span class="education__studies">University Cruzeiro do Sul</span>
+                                <span class="education__year">2004 - 2006</span>
+                            </div>
+                        </div>
+                    </div>
                 </section>
 
 
