--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
 
                 <!--========== EDUCATION ==========-->
                 <section class="education section" id="education">
-                    <h2 class="setion-title">Education</h2>
+                    <h2 class="section-title">Education</h2>
         
                     <div class="education__container bd-grid">
-                        <div class="education_content">
+                        <div class="education__content">
                             <div class="education__time">
                                 <span class="education__rounder"></span>
                                 <span class="education__line"></span>
@@ -148,7 +148,7 @@
                                 <span class="education__year">2020 - 2021</span>
                             </div>
                         </div>
-                        <div class="education_content">
+                        <div class="education__content">
                             <div class="education__time">
                                 <span class="education__rounder"></span>
                                 <span class="education__line"></span>
@@ -160,10 +160,10 @@
                                 <span class="education__year">2006 - 2008</span>
                             </div>
                         </div>
-                        <div class="education_content">
+                        <div class="education__content">
                             <div class="education__time">
                                 <span class="education__rounder"></span>
-                                <span class="education__line"></span>
+                                <!-- <span class="education__line"></span> -->
                             </div>
 
                             <div class="education__data bd-grid">
@@ -178,7 +178,37 @@
 
                 <!--========== SKILLS  ==========-->
                 <section class="skills section" id="skills">
-
+                    <h2 class="section-title">Skills</h2>
+                    <div class="skill__content bd-grid">
+                        <ul class="skills__data">
+                            <li class="skills_name">
+                                <span class="skills__circle"></span> Html
+                            </li>
+                            <li class="skills_name">
+                                <span class="skills__circle"></span> Java
+                            </li>
+                            <li class="skills_name">
+                                <span class="skills__circle"></span> Phyton
+                            </li>
+                            <li class="skills_name">
+                                <span class="skills__circle"></span> JavaScript
+                            </li>
+                        </ul>
+                        <ul class="skills__data">
+                            <li class="skills_name">
+                                <span class="skills__circle"></span> Angular
+                            </li>
+                            <li class="skills_name">
+                                <span class="skills__circle"></span> JPA
+                            </li>
+                            <li class="skills_name">
+                                <span class="skills__circle"></span> SpringBoot
+                            </li>
+                            <li class="skills_name">
+                                <span class="skills__circle"></span> JSF
+                            </li>
+                        </ul>
+                    </div>
                 </section>
 
             </div>
