Ajust to reponsive site

--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
                             <h1 class="home__title">MAIK <b>COSTA</b></h1>
                             <h3 class="home__profession">Full Stack Developer</h3>
                             <!-- Button to generate and download the pdf. Available for desktop. -->
-                            <a download="" href="assets/pdf/ResumeCv.pdf" class="home__button-movil">Download</a>
+                            <div>
+                                <a download="" href="assets/pdf/ResumeCv.pdf" class="home__button-movil">Download</a>
+                            </div>
                         </div>
                         <!-- Theme change button -->
 
@@ -272,11 +274,11 @@
                         <div class="experience__content">
                             <div class="experience__time">
                                 <span class="experience__rounder"></span>
-                                <!-- <span class="experience__line"></span> -->
+                                <!--<span class="experience__line"></span>-->
                             </div>
 
                             <div class="experience__data bd-grid">
-                                <h3 class="experience__title">Consultor</h3>
+                                <h3 class="experience__title">Primeiro</h3>
                                 <span class="experience__company">From 2021 to today | Access System and Process</span>
                                 <p class="experience__description">Responsabilidades:
                                     • Disseminar e ajudar o time na adoção de práticas ágeis;
