Insert Dark Theme

--- a/index.html
+++ b/index.html
@@ -87,9 +87,6 @@
                                 <a download="" href="assets/pdf/ResumeCv.pdf" class="home__button-movil">Download</a>
                             </div>
                         </div>
-                        <!-- Theme change button -->
-
-
                         <div class="home_address bd-grid">
                             <span class="home__information">
                                 <i class='bx bx-map home__icon'></i>Av. Odair Santanelli,300 - Guarulhos/SP
@@ -102,9 +99,9 @@
                             </span>
                         </div>
                     </div>
-
-
                 </section>
+                <!-- Theme change button -->
+                <i class="bx bx-moon change-theme" title="Theme" id="theme-button"></i>
 
                 <!--========== SOCIAL ==========-->
                 <section class="social section">
