Update CSS Dark Theme and Section certificates

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Responsive resume cv</title>
 </head>
 
-<body>
+<body class="scale-cv">
     <!--========== HEADER ==========-->
     <header class="l-header" id="header">
         <nav class="nav bd-contaneirer">
@@ -99,22 +99,25 @@
                             </span>
                         </div>
                     </div>
+                    <!-- Theme change button -->
+                    <i class="bx bx-moon change-theme" title="Theme" id="theme-button"></i>
+
+                    <!-- Button to generete and download the pdf. Avaible for desktop-->
+                    <i class="bx bx-download generate-pdf" title="Generate PDF" id="resume-button"></i>
                 </section>
-                <!-- Theme change button -->
-                <i class="bx bx-moon change-theme" title="Theme" id="theme-button"></i>
 
                 <!--========== SOCIAL ==========-->
                 <section class="social section">
                     <h2 class="section-title">Social</h2>
 
                     <div class="social__container bd-grid">
-                        <a href="https://www.linkedin.com/" target="_blank" targetclass="social__link">
+                        <a href="https://www.linkedin.com/" target="_blank" class="social__link">
                             <i class="bx bxl-linkedin-square social__icon"></i>@maikcosta
                         </a>
-                        <a href="https://www.facebook.com/" target="_blank" targetclass="social__link">
+                        <a href="https://www.facebook.com/" target="_blank" class="social__link">
                             <i class="bx bxl-facebook social__icon"></i>@maikcosta
                         </a>
-                        <a href="https://www.instagram.com/" target="_blank" targetclass="social__link">
+                        <a href="https://www.instagram.com/" target="_blank" class="social__link">
                             <i class="bx bxl-instagram social__icon"></i>@maikcosta
                         </a>
                     </div>
@@ -124,9 +127,7 @@
                 <section class="profile section" id="profile">
                     <h2 class="section-title">Profile</h2>
                     <p class="profile_description">
-                        MBA Projetos de Sistema de Informação e graduações em duas áreas tecnológicas sendo Desenvolvimento de Sistemas Web e Redes de Computadores, atualmente tem como função principal ser gestor de TI aplicando boas práticas adquiridas através de certificações (DevOps, Agile Scrum e Lean It) aplicando frameworks de engenharia de software com o uso de padrões orientados a objetos, com prioridade na melhoria do processo e eficiência na construção de soluções, manutenção de softwares e execução de processos operacionais.
-                        Experiência em levantamento de requisitos, implantação, sustentação de sistemas, integridade da informação e CI / CD.
-                        Negociação com parceiros de tecnologia.
+                        MBA Information System Projects and graduations in two technological areas being Web Systems Development and Computer Networks, currently has as main function to be an IT manager applying best practices acquired through certifications (DevOps, Agile Scrum and Lean It) applying IT frameworks software engineering with the use of object-oriented patterns, prioritizing process improvement and efficiency in building solutions, software maintenance and execution of operational processes. Experience in requirements gathering, implementation, systems support, information integrity and CI / CD. Negotiation with technology partners.
                     </p>
                 </section>
 
@@ -225,7 +226,7 @@
                             </div>
 
                             <div class="experience__data bd-grid">
-                                <h3 class="experience__title">Consultor</h3>
+                                <h3 class="experience__title">TOTVS Specialist</h3>
                                 <span class="experience__company">From 2021 to today | Access System and Process</span>
                                 <p class="experience__description">Responsabilidades:
                                     • Disseminar e ajudar o time na adoção de práticas ágeis;
@@ -250,22 +251,9 @@
                             </div>
 
                             <div class="experience__data bd-grid">
-                                <h3 class="experience__title">Consultor</h3>
-                                <span class="experience__company">From 2021 to today | Access System and Process</span>
-                                <p class="experience__description">Responsabilidades:
-                                    • Disseminar e ajudar o time na adoção de práticas ágeis;
-                                    • Apoiar o Product Owner e os membros do time para criar itens do backlog de
-                                    forma clara e concisa;
-                                    • Conduzir e facilitar as cerimônias: Daily, Planning, Review e Retrospectiva;
-                                    • Avaliar junto ao time o andamento das entregas em Sprints e Kanban;
-                                    • Participação na cerimônia de Retrospectiva, avaliando junto ao time a evolução das entregas;
-                                    • Suporte ao time de desenvolvimento, tirando os impedimentos diários e auxiliando no entendimento do negócio;
-                                    • Atuação em Squads com diferentes produtos, tais como: TOTVS Protheus, Front-End e Apps.
-                                    • Potencializar características na equipe, como proatividade, boa comunicação e bom relacionamento em equipes multidisciplinares
-                                    • Promover a auto-organização
-                                    • Gestão de Conflitos
-                                    
-                                    Ferramentas: Jira Software e Monday.</p>
+                                <h3 class="experience__title">IT Supervisor</h3>
+                                <span class="experience__company">From 2008 - 2021 | Santo Angelo</span>
+                                <p class="experience__description">Information Technology Management involving the area of ​​ERP (TOTVS) and infrastructure systems. Responsible for area indicators (CAPEX and OPEX, projects and technological evolution) Participation in the revitalization project of the company's ERP system. Involvement in all project areas such as requirements gathering, user interviews, documentation, schedule definition and monitoring, physical x financial evolution, resource control, internal and external and all other project needs. Together with other managers, we redefined processes and implemented new features. Maintenance and Development customizations, application of packages, database management, environment configuration, maintenance in data dictionary, update of releases in TOTVS Protheus systems, versions 8,10, 11 and 12, knowing the modules: Billing, Financial, Inventory, Purchasing, Management Accounting, Tax Books, Document Control, Entrance Inspection, Non-Conformity Control, Production Control Planning, Metrology, Personnel Management, Electronic Point and TAF. Service demand management with ITSM tools.</p>
                             </div>
                         </div>
                         <div class="experience__content">
@@ -275,22 +263,9 @@
                             </div>
 
                             <div class="experience__data bd-grid">
-                                <h3 class="experience__title">Primeiro</h3>
-                                <span class="experience__company">From 2021 to today | Access System and Process</span>
-                                <p class="experience__description">Responsabilidades:
-                                    • Disseminar e ajudar o time na adoção de práticas ágeis;
-                                    • Apoiar o Product Owner e os membros do time para criar itens do backlog de
-                                    forma clara e concisa;
-                                    • Conduzir e facilitar as cerimônias: Daily, Planning, Review e Retrospectiva;
-                                    • Avaliar junto ao time o andamento das entregas em Sprints e Kanban;
-                                    • Participação na cerimônia de Retrospectiva, avaliando junto ao time a evolução das entregas;
-                                    • Suporte ao time de desenvolvimento, tirando os impedimentos diários e auxiliando no entendimento do negócio;
-                                    • Atuação em Squads com diferentes produtos, tais como: TOTVS Protheus, Front-End e Apps.
-                                    • Potencializar características na equipe, como proatividade, boa comunicação e bom relacionamento em equipes multidisciplinares
-                                    • Promover a auto-organização
-                                    • Gestão de Conflitos
-                                    
-                                    Ferramentas: Jira Software e Monday.</p>
+                                <h3 class="experience__title">Network Analyst</h3>
+                                <span class="experience__company">From 2005 - 2008 | DAC</span>
+                                <p class="experience__description">Participation in the creation of the company's website, responsible for updating, online support to representatives in Brazil, firewall and proxy management, wireless network configuration and maintenance (Access Point), server configuration (Active Directory, IIS, DNS, DHCP and Routing ), appliance configuration and maintenance (hotbrick), management in telephony-oriented software (sumus and tac), backup routines, improvement in the ERP system (MK systems), support to basic, intermediate and advanced user levels, management on the part of (PABX, VOIP , Private Link).</p>
                             </div>
                         </div>
                     </div>
@@ -302,16 +277,29 @@
 
                     <div class="certificate__container bd-grid">
                         <div class="certificate__content">
-                            <h3 class="certificate__title">Certificação 1</h3>
-                            <p class="certiticate__description">Detalhes</p>
+                            <h3 class="certificate__title">DevOps Lead</h3>
+                            <p class="certiticate__description">Certification Number:</p>
+                            <a href="https://www.credential.net/73d88633-5160-4819-aed3-43fbea3b480f" target="_blank" class="certificate__link">5F60DCC <i class='bx bx-link-external'></i></a>
                         </div>
                         <div class="certificate__content">
-                            <h3 class="certificate__title">Certificação 2</h3>
-                            <p class="certiticate__description">Detalhes</p>
+                            <h3 class="certificate__title">Agile Scrum Fundamentals</h3>
+                            <p class="certiticate__description">Certification Number:</p>
+                            <a href="https://www.credential.net/7652852a-56a5-4d0d-8954-be75933844c5" target="_blank" class="certificate__link">5F60DCD <i class='bx bx-link-external'></i></a>
                         </div>
                         <div class="certificate__content">
-                            <h3 class="certificate__title">Certificação 3</h3>
-                            <p class="certiticate__description">Detalhes</p>
+                            <h3 class="certificate__title">DevOps Lead</h3>
+                            <p class="certiticate__description">Certification Number:</p>
+                            <a href="https://www.credential.net/73d88633-5160-4819-aed3-43fbea3b480f" target="_blank" class="certificate__link">5F60DCC <i class='bx bx-link-external'></i></a>
+                        </div>
+                        <div class="certificate__content">
+                            <h3 class="certificate__title">DevOps Lead</h3>
+                            <p class="certiticate__description">Certification Number:</p>
+                            <a href="https://www.credential.net/73d88633-5160-4819-aed3-43fbea3b480f" target="_blank" class="certificate__link">5F60DCC <i class='bx bx-link-external'></i></a>
+                        </div>
+                        <div class="certificate__content">
+                            <h3 class="certificate__title">DevOps Lead</h3>
+                            <p class="certiticate__description">Certification Number:</p>
+                            <a href="https://www.credential.net/73d88633-5160-4819-aed3-43fbea3b480f" target="_blank" class="certificate__link">5F60DCC <i class='bx bx-link-external'></i></a>
                         </div>
                     </div>
                 </section>
