--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
     </a>
 
     <!--========== HTML2PDF ==========-->
-    <script src="assets/js/v2html2pdf.bundle.min.js"></script>
+    <script src="assets/js/html2pdf.bundle.min.js"></script>
 
     <!--========== MAIN JS ==========-->
     <script src="assets/js/main.js"></script>
