--- a/index.html
+++ b/index.html
@@ -322,7 +322,8 @@
                         </div>
                     </div>
                 </section>
-
+                <!--========== PAGE-BREAK ==========-->
+                <div class="html2pdf__page-break"></div>
                 <!--========== CERTIFICATES ==========-->
                 <section class="certificate section" id="certificates">
                     <h2 class="section-title">Certifications</h2>
